--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <!-- Responsive Card -->
             <div id="card-container">
                 <!-- Card-1 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://images.unsplash.com/photo-1491497895121-1334fc14d8c9?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Ooty.">
                     <div id="card-content">
                         <h3>Ooty.</h3>
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <!-- Card-2 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://images.unsplash.com/photo-1663089554996-43a79b00f34a?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Lonavala.">
                     <div id="card-content">
                         <h3>Lonavala.</h3>
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <!-- Card-3 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://images.unsplash.com/photo-1605649487212-47bdab064df7?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Manali.">
                     <div id="card-content">
                         <h3>Manali.</h3>
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <!-- Card-4 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://images.unsplash.com/photo-1611076763501-55d80ccc93cb?q=80&w=1465&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mount Abu.">
                     <div id="card-content">
                         <h3>Mount Abu.</h3>
@@ -300,7 +300,7 @@
                     </div>
                 </div>
                 <!-- Card-5 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://images.unsplash.com/photo-1595815771614-ade9d652a65d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Srinagar.">
                     <div id="card-content">
                         <h3>Srinagar.</h3>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <!-- Card-6 -->
-                <div id="card">
+                <div data-scroll data-scroll-speed="0.5" id="card">
                     <img src="https://plus.unsplash.com/premium_photo-1661886836347-5738ab3b7728?q=80&w=1464&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mussoorie.">
                     <div id="card-content">
                         <h3>Mussoorie.</h3>
@@ -331,7 +331,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
-                        <h4>company</h4>
+                        <h4 data-scroll data-scroll-speed="0.5">company</h4>
                         <ul>
                             <li><a href="#">about us</a></li>
                             <li><a href="#">our services</a></li>
@@ -340,7 +340,7 @@
                         </ul>
                     </div>
                     <div class="footer-col">
-                        <h4>get help</h4>
+                        <h4 data-scroll data-scroll-speed="0.5">get help</h4>
                         <ul>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">shipping</a></li>
@@ -350,7 +350,7 @@
                         </ul>
                     </div>
                     <div class="footer-col">
-                        <h4>online shop</h4>
+                        <h4 data-scroll data-scroll-speed="0.5">online shop</h4>
                         <ul>
                             <li><a href="#">watch</a></li>
                             <li><a href="#">bag</a></li>
@@ -359,8 +359,8 @@
                         </ul>
                     </div>
                     <div class="footer-col">
-                        <h4>follow us</h4>
-                        <div class="social-links">
+                        <h4 data-scroll data-scroll-speed="0.5">follow us</h4>
+                        <div data-scroll data-scroll-speed="0.5" class="social-links">
                             <a href="error.html"><i class="ri-facebook-box-fill"></i></a>
                             <a href="error.html"><i class="ri-twitter-fill"></i></a>
                             <a href="error.html"><i class="ri-instagram-fill"></i></a>
